--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html lang="en">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/base-min.css">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    Test Test Test
+    Test Body 
+
+    Test Body
+
+    Test Body
 </body>
 </html>
