Update: add about page and link to about page from index

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <html lang="en">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/base-min.css">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/base-min.css">
     <title>Document</title>
 </head>
 <body>
-    Test Body 
+    <div class="container"</div>
+        <h1>Welcome to this simple static website</h1>
+        <h2>This site just demonstrates how Github can be used to host static web content.</h2>
+        <h2>It also shows how pages can be linked together. To visit the about section, click on the link below</h2>
+        <a href="./about.html"><h2>click here to go to the about page!</h2></a>
 
-    Test Body
-
-    Test Body
 </body>
 </html>
