--- a/about.html
+++ b/about.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Nothing here!</h2>
+    <h2>About me!</h2>
+    <h3>This is just a simple site to learn how to use Github Pages and static websites</h3>
+    <h3>Please don't laugh at it...too much! 😋</h3>
     
 </body>
 </html>
