Update: tidy up readme, add .gitignore for later, add pic to about page

--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
     <h2>About me!</h2>
     <h3>This is just a simple site to learn how to use Github Pages and static websites</h3>
     <h3>Please don't laugh at it...too much! 😋</h3>
-    
+
+    <img src="./images/dogpic.jpg" alt="pic-of-dog" style="width:500px;height:350px;">
+
 </body>
 </html>
