Update: include tab title and favicon image and include comments on what code is doing

--- a/about.html
+++ b/about.html
@@ -3,9 +3,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/base-min.css">
-    <title>Document</title>
+     <!--Change the name of the title to change the string that appears in the browser tab-->
+    <title>About</title>
+    <!--Add a link like below to add a favicon icon to the broswer tab-->
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
 </head>
 <body>
+    <a href="./index.html"><h2>click here to go to the home page!</h2></a>
+
     <h2>About me!</h2>
     <h3>This is just a simple site to learn how to use Github Pages and static websites</h3>
     <h3>Please don't laugh at it...too much! 😋</h3>
