--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/base-min.css">
-    <title>Document</title>
+    <!--Change the name of the title to change the string that appears in the browser tab-->
+    <title>Home Page</title>
+    <!--Add a link like below to add a favicon icon to the broswer tab-->
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
 </head>
 <body>
     <div class="container"</div>
