Update: include experiments page and using buttons. Also updated CSS to another external stylesheet.

--- a/experiments.html
+++ b/experiments.html
@@ -2,24 +2,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--This is the link to the external style sheet so that certain design and functionality can be used-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
      <!--Change the name of the title to change the string that appears in the browser tab-->
     <title>About</title>
     <!--Add a link like below to add a favicon icon to the broswer tab-->
     <link rel="icon" type="image/x-icon" href="./images/favicon.png">
 </head>
+
 <body>
-    <a href="./index.html"><h2>click here to go to the home page!</h2></a>
-
-    <h2>About me!</h2>
-    <h3>This is just a simple site to learn how to use Github Pages and static websites</h3>
-    <h3>Please don't laugh at it...too much! 😋</h3>
-
-    <img src="./images/dogpic.jpg" alt="pic-of-dog" style="width:500px;height:350px;">
 
     <div>
-    <a class="pure-button" href="https:\\www.google.com">A Pure Button</a>
-</div>
+        <p>Here's a nice button</p>
+        <a class="pure-button" href="https:\\www.google.com">Visit Google</a>
+    </div>
+
+    <div>
+        <p>Here's another nice button</p>
+        <a class="pure-button" href="https:\\www.reddit.com">Visit Reddit</a>
+    </div>
     
 
 </body>
